--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
     <title>Nick Thien</title>
@@ -27,7 +28,7 @@ body {
 <div class="container col-lg-8">
   <h2>Career</h2>
 
-  <div class="row">
+  <div class="row v-100">
       <img src="logo_awespyre.png" class="img-fluid mb-4" alt="">
       <img src="logo_lm.png" class="img-fluid mb-4" alt="">
       <img src="logo_fdg.png" class="img-fluid mb-4" alt="">
@@ -35,8 +36,6 @@ body {
       <img src="logo_gg.png" class="img-fluid mb-4" alt="">
       <img src="logo_vs.png" class="img-fluid mb-4" alt="">
     </div>
-  
-
 
   <div class="row">
     <div class="col-lg-4 col-md-12 mb-4">
@@ -54,7 +53,6 @@ body {
       <img src="logo_vs.png" class="img-fluid mb-4" alt="">
     </div>
   </div>
-
 
 </div>
 
