--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
 body {
   background-color: lightblue;
 }
+     /* The heart of the matter */
+
+     .horizontal-scrollable > .row {
+         overflow-x: auto;
+         white-space: nowrap;
+     }
+
+     .horizontal-scrollable > .row > .col-xs-4 {
+         display: inline-block;
+         float: none;
+     }
+     /* Decorations */
+
+.careercards {
+  width: 250px;
+  height: 250px;
+  border: 1px solid grey;
+  border-radius: 10px;
+  float: left;
+}
 
 </style>
 
@@ -25,51 +45,43 @@ body {
 </head>
 <body>
 
-<div class="container col-lg-8">
+<div class="container">
   <h2>Career</h2>
 
-  <div class="row v-100">
-      <img src="logo_awespyre.png" class="img-fluid mb-4" alt="">
-      <img src="logo_lm.png" class="img-fluid mb-4" alt="">
-      <img src="logo_fdg.png" class="img-fluid mb-4" alt="">
-      <img src="logo_sas.png" class="img-fluid mb-4" alt="">
-      <img src="logo_gg.png" class="img-fluid mb-4" alt="">
-      <img src="logo_vs.png" class="img-fluid mb-4" alt="">
-    </div>
+  <div class="container">
+    <div class="row text-center align-items-center">
+        <div class="careercards"><img src="logo_awespyre.png" class="img-fluid bm-4 p-3" alt=""></div>
+        <div class="careercards"><img src="logo_fdg.png" class="img-fluid bm-4 p-3" alt=""></div>
+        <div class="careercards"><img src="logo_gg.png" class="img-fluid bm-4 p-3" alt=""></div>
+        <div class="careercards"><img src="logo_vs.png" class="img-fluid bm-4 p-3" alt=""></div>
+        <div class="careercards"><img src="logo_lm.png" class="img-fluid bm-4 p-3" alt=""></div>
+        <div class="careercards"><img src="logo_sas.png" class="img-fluid bm-4 p-3" alt=""></div>
 
-  <div class="row">
-    <div class="col-lg-4 col-md-12 mb-4">
-      <img src="logo_awespyre.png" class="img-fluid mb-4" alt="">
-      <img src="logo_lm.png" class="img-fluid mb-4" alt="">
-    </div>
-    <div class="col-lg-4 col-md-12 mb-4">
-      <img src="logo_fdg.png" class="img-fluid mb-4" alt="">
-      <img src="logo_sas.png" class="img-fluid mb-4" alt="">
-    </div>
-    <div class="col-lg-4 col-md-12 mb-4">
-      <img src="logo_gg.png" class="img-fluid mb-4" alt="">
-    </div>
-    <div class="col-lg-4 col-md-12 mb-4">
-      <img src="logo_vs.png" class="img-fluid mb-4" alt="">
     </div>
   </div>
 
+
 </div>
 
-<div class="container col-lg-8">
+<div class="container">
 <h2>Tools</h2>
 
-<img src="logo_davinci.png" class="logo">
-<img src="logo_gimp.png" class="logo">
-<img src="logo_obs.png" class="logo">
-
+<div class="container">
+  <div class="row">
+<div class="careercards"><img src="logo_davinci.png" class="img-fluid bm-4 p-3"></div>
+<div class="careercards"><img src="logo_gimp.png" class="img-fluid bm-4 p-3"></div>
+<div class="careercards"><img src="logo_obs.png" class="img-fluid bm-4 p-3"></div>
+</div>
+</div>
 </div>
 
-<div class="container col-lg-8">
+<div class="container">
 <h2>Education</h2>
 
-<img src="logo_utar.png" class="logo">
-<img src="logo_ubd.png" class="logo">
+<div class="container">
+  <div class="row">
+<div class="careercards"><img src="logo_utar.png" class="img-fluid bm-4 p-3"></div>
+<div class="careercards"><img src="logo_ubd.png" class="img-fluid bm-4 p-3"></div>
 </div>
-
+</div>
 </body>
