--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@ body {
      /* Decorations */
 
 .careercards {
-  width: 250px;
-  height: 250px;
+  max-width: 250px;
   border: 1px solid grey;
   border-radius: 10px;
   float: left;
@@ -49,13 +48,13 @@ body {
   <h2>Career</h2>
 
   <div class="container">
-    <div class="row text-center align-items-center">
-        <div class="careercards"><img src="logo_awespyre.png" class="img-fluid bm-4 p-3" alt=""></div>
-        <div class="careercards"><img src="logo_fdg.png" class="img-fluid bm-4 p-3" alt=""></div>
-        <div class="careercards"><img src="logo_gg.png" class="img-fluid bm-4 p-3" alt=""></div>
-        <div class="careercards"><img src="logo_vs.png" class="img-fluid bm-4 p-3" alt=""></div>
-        <div class="careercards"><img src="logo_lm.png" class="img-fluid bm-4 p-3" alt=""></div>
-        <div class="careercards"><img src="logo_sas.png" class="img-fluid bm-4 p-3" alt=""></div>
+    <div class="row d-flex" style="width: 3000px;">
+        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_awespyre.png" class="img-fluid" alt="Awespyre"></div>
+        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_fdg.png" class="img-fluid" alt="Fire dragoon"></div>
+        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_gg.png" class="img-fluid" alt="Generasi Gemilang"></div>
+        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_vs.png" class="img-fluid" alt="Veloce Solutions"></div>
+        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_lm.png" class="img-fluid" alt="Lil' Monsters"></div>
+        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_sas.png" class="img-fluid" alt="St. Andrew's School"></div>
 
     </div>
   </div>
@@ -66,13 +65,13 @@ body {
 <div class="container">
 <h2>Tools</h2>
 
-<div class="container">
-  <div class="row">
-<div class="careercards"><img src="logo_davinci.png" class="img-fluid bm-4 p-3"></div>
-<div class="careercards"><img src="logo_gimp.png" class="img-fluid bm-4 p-3"></div>
-<div class="careercards"><img src="logo_obs.png" class="img-fluid bm-4 p-3"></div>
-</div>
-</div>
+  <div class="container">
+    <div class="row d-flex" style="width: 3000px;">
+      <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_davinci.png" class="img-fluid"></div>
+      <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_gimp.png" class="img-fluid"></div>
+      <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_obs.png" class="img-fluid"></div>
+    </div>
+  </div>
 </div>
 
 <div class="container">
@@ -80,8 +79,8 @@ body {
 
 <div class="container">
   <div class="row">
-<div class="careercards"><img src="logo_utar.png" class="img-fluid bm-4 p-3"></div>
-<div class="careercards"><img src="logo_ubd.png" class="img-fluid bm-4 p-3"></div>
+<div class="careercards d-flex align-self-center justify-content-center"><img src="logo_utar.png" class="img-fluid"></div>
+<div class="careercards d-flex align-self-center justify-content-center"><img src="logo_ubd.png" class="img-fluid"></div>
 </div>
 </div>
 </body>
