--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ body {
 <div class="container">
   <h2>Career</h2>
 
-  <div class="container">
-    <div class="row d-flex" style="width: 3000px;">
-        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_awespyre.png" class="img-fluid" alt="Awespyre"></div>
+  <div class="container" style="overflow-x: scroll;">
+    <div class="row d-flex" style="width: 1500px;">
+        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_awespyre.png" class="img-fluid p-2" alt="Awespyre"></div>
         <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_fdg.png" class="img-fluid" alt="Fire dragoon"></div>
         <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_gg.png" class="img-fluid" alt="Generasi Gemilang"></div>
         <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_vs.png" class="img-fluid" alt="Veloce Solutions"></div>
