--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@ body {
 }
      /* The heart of the matter */
 
+.container-1 {
+  background-color: lightgreen;
+}
+
+
 .careercards {
   max-width: 250px;
   border: 1px solid grey;
@@ -44,33 +49,66 @@ body {
 
 
 
-<div class="container">
-  <h2>Career</h2>
+<div class="container-1">
+  <div class="container">
+    <h2  class="d-flex justify-content-center pt-5">Work Experience</h2>
 
-  <div class="container" style="overflow-x: hidden;">
-    <div class="row d-flex">
-        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_awespyre.png" class="img-fluid p-2" alt="Awespyre"></div>
-        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_fdg.png" class="img-fluid" alt="Fire dragoon"></div>
-      </div>
-    <div class="row d-flex">
-        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_gg.png" class="img-fluid" alt="Generasi Gemilang"></div>
-        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_vs.png" class="img-fluid" alt="Veloce Solutions"></div>
-      </div>
-    <div class="row d-flex">
-
-        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_lm.png" class="img-fluid" alt="Lil' Monsters"></div>
-        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_sas.png" class="img-fluid" alt="St. Andrew's School"></div>
-      </div>
+  <div class="row justify-content-around">
+    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+      <div class="d-flex justify-content-center"><img src="/img/logo/logo_awespyre.png" class="img-fluid p-3" style="height: 100px;" alt="Awespyre"></div>
+      <h4>Business Owner | Awespyre</h4>
+      <p>2018 - Present</p>
+      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
+    </div>
+    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+      <div class="d-flex justify-content-center"><img src="logo_fdg.png" class="img-fluid p-3" style="height: 100px;" alt="Fire dragoon"></div>
+      <h4>Content Executive | Fire Dragoon Esports</h4>
+      <p>2017</p>
+      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
     </div>
   </div>
 
+  <div class="row justify-content-around">
+    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+      <div class="d-flex justify-content-center"><img src="logo_gg.png" class="img-fluid p-3" style="height: 100px;" alt="Generasi Gemilang"></div>
+      <h4>Volunteer | Generasi Gemilang</h4>
+      <p>2017</p>
+      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
+    </div>
+    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+      <div class="d-flex justify-content-center"><img src="logo_vs.png" class="img-fluid p-3" style="height: 100px;" alt="Veloce Solutions"></div>
+      <h4>Customer Service Executive | Veloce Solutions</h4>
+      <p>2017</p>
+      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
+    </div>
+  </div>
 
+  <div class="row justify-content-around">
+    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+      <div class="d-flex justify-content-center"><img src="logo_lm.png" class="img-fluid p-3" style="height: 100px;" alt="Lil' Monsters"></div>
+      <h4>Junior Executive | Lil' Monsters</h4>
+      <p>2017</p>
+      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
+    </div>
+    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+      <div class="d-flex justify-content-center"><img src="logo_sas.png" class="img-fluid p-3" style="height: 100px;" alt="St. Andrew's School"></div>
+      <h4>Teacher | St. Andrew's School</h4>
+      <p>2017</p>
+      <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
+    </div>
+  </div>
+
+  </div>
 </div>
 
-<div class="container">
-<h2>Tools</h2>
 
-  <div class="container">
+<div class="container-2">
+
+
+<div class="container">
+<h2>Written Work</h2>
+
+
     <div class="row d-flex">
       <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_davinci.png" class="img-fluid"></div>
       <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_gimp.png" class="img-fluid"></div>
@@ -81,12 +119,27 @@ body {
     </div>
     </div>
   </div>
-</div>
+
+  <div class="container">
+  <h2>Video Content</h2>
+
+
+      <div class="row d-flex">
+        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_davinci.png" class="img-fluid"></div>
+        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_gimp.png" class="img-fluid"></div>
+      </div>
+    <div class="row d-flex">
+
+        <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_obs.png" class="img-fluid"></div>
+      </div>
+      </div>
+    </div>
+
+<div class="container-3">
+
 
 <div class="container">
-<h2>Education</h2>
-
-<div class="container">
+  <h2>Education</h2>
   <div class="row d-flex">
 <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_utar.png" class="img-fluid"></div>
 <div class="careercards d-flex align-self-center justify-content-center"><img src="logo_ubd.png" class="img-fluid"></div>
