--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@ body {
 
   <div class="row justify-content-around">
     <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="/img/logo/logo_awespyre.png" class="img-fluid p-3" style="height: 100px;" alt="Awespyre"></div>
+      <div class="d-flex justify-content-center"><img src="./img/logo/logo_awespyre.png" class="img-fluid p-3" style="height: 100px;" alt="Awespyre"></div>
       <h4>Business Owner | Awespyre</h4>
       <p>2018 - Present</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
     </div>
     <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="logo_fdg.png" class="img-fluid p-3" style="height: 100px;" alt="Fire dragoon"></div>
+      <div class="d-flex justify-content-center"><img src="./img/logo/logo_fdg.png" class="img-fluid p-3" style="height: 100px;" alt="Fire dragoon"></div>
       <h4>Content Executive | Fire Dragoon Esports</h4>
       <p>2017</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
@@ -70,13 +70,13 @@ body {
 
   <div class="row justify-content-around">
     <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="logo_gg.png" class="img-fluid p-3" style="height: 100px;" alt="Generasi Gemilang"></div>
+      <div class="d-flex justify-content-center"><img src="./img/logo/logo_gg.png" class="img-fluid p-3" style="height: 100px;" alt="Generasi Gemilang"></div>
       <h4>Volunteer | Generasi Gemilang</h4>
       <p>2017</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
     </div>
     <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="logo_vs.png" class="img-fluid p-3" style="height: 100px;" alt="Veloce Solutions"></div>
+      <div class="d-flex justify-content-center"><img src="./img/logo/logo_vs.png" class="img-fluid p-3" style="height: 100px;" alt="Veloce Solutions"></div>
       <h4>Customer Service Executive | Veloce Solutions</h4>
       <p>2017</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
@@ -85,13 +85,13 @@ body {
 
   <div class="row justify-content-around">
     <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="logo_lm.png" class="img-fluid p-3" style="height: 100px;" alt="Lil' Monsters"></div>
+      <div class="d-flex justify-content-center"><img src="./img/logo/logo_lm.png" class="img-fluid p-3" style="height: 100px;" alt="Lil' Monsters"></div>
       <h4>Junior Executive | Lil' Monsters</h4>
       <p>2017</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
     </div>
     <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
-      <div class="d-flex justify-content-center"><img src="logo_sas.png" class="img-fluid p-3" style="height: 100px;" alt="St. Andrew's School"></div>
+      <div class="d-flex justify-content-center"><img src="./img/logo/logo_sas.png" class="img-fluid p-3" style="height: 100px;" alt="St. Andrew's School"></div>
       <h4>Teacher | St. Andrew's School</h4>
       <p>2017</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
