--- a/ted/index.html
+++ b/ted/index.html
@@ -11,9 +11,10 @@
     <title>Ted</title>
   </head>
   <body>
+    <div class="container">
     <h1>Ted</h1>
 
-    <img src="./img/ted/ted.jpg">
+    <img src="../img/ted/ted.jpg" class="img-fluid col-xl-2 mx-auto d-block" alt="Ted">
 
     <h4>Another year around the block, another year older.</h4>
 
@@ -32,6 +33,7 @@
     <p>I had to do something. It was do or die at this point cause one of us wasn't going to  make it out alive at the end if we kept going down this path. If we have to live with each other for the rest of our lives then we had to set boundaries for each other. It was tough for me, but I had to love Ted for what he brings to my life and Ted had to learn to not just bring up the negatives but also the positives.</p>
 
     <p>There are days when Ted still blurts out some really toxic s*t and I have to accept Ted for who he is. But at least there are days when Ted says something nice and I'm less agitated when he doesn't do what he's supposed to do. We're imperfect, but we're trying our best to work through it by communicating with each other and the end result is that I'm learning to love myself more.</p>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
