--- a/ted/index.html
+++ b/ted/index.html
@@ -14,7 +14,7 @@
     <div class="container">
     <h1>Ted</h1>
 
-    <img src="../img/ted/ted.jpg" class="img-fluid col-xl-2 mx-auto d-block" alt="Ted">
+    <img src="../img/ted/ted.jpg" class="img-fluid col-xl-4 col-md-4 col-sm-6 mx-auto d-block py-5" alt="Ted">
 
     <h4>Another year around the block, another year older.</h4>
 
