--- a/cv/index.html
+++ b/cv/index.html
@@ -28,21 +28,22 @@ body {
   </head>
   <body>
     <div class="container">
-    <div class="row pt-5 mx-5">
+    <div class="row pt-3 mx-5" style="border-bottom: 3px solid black;">
       <div class="col-lg-8">
-        <h1 style="font-family: 'Urbanist', sans-serif;">Nicholas Thien Min Jit</h1>
+        <h1 class="header" style="font-family: 'Urbanist', sans-serif;">Nicholas Thien Min Jit</h1>
         </div>
         <div class="col-lg-4 text-end">
           <ul style="list-style-type: none !important;">
-            <li>nick.thien@gmail.com</li>
-            <li>nickthien.com</li>
+            <li><a href = "mailto: nick.thien(at)gmail.com">nick.thien@gmail.com</a></li>
+            <li><a href = "https://nickthien.com">nickthien.com</a></li>
           </ul>
           </div>
         </div>
 
 
 <div class="row mx-5">
-  <div class="col-lg-3">
+  <div class="col-lg-4 px-3" style="background-color: lightgreen;">
+    <div class="py-3">
     <h5 class="header">SKILLS</h5>
     <strong>Programming</strong>
     <ul style="font-size: 0.8em">
@@ -55,7 +56,10 @@ body {
       <li>Videographer</li>
       <li>Sound Engineer</li>
     </ul>
-    <h5 class="header mt-5">LANGUAGE</h5>
+  </div>
+
+    <div class="py-3">
+    <h5 class="header">LANGUAGE</h5>
     <strong>Native</strong>
     <ul style="font-size: 0.8em">
       <li>English</li>
@@ -72,8 +76,10 @@ body {
       <li>Adobe Photoshop / GIMP</li>
     </ul>
   </div>
+  </div>
 
-  <div class="col-lg-8 ms-5">
+  <div class="col-lg-8 px-3">
+    <div class="py-3">
     <h5 class="header">EXPERIENCE</h5>
     <div class="mt-2">
     <div class="row">
@@ -110,8 +116,10 @@ body {
       <li>Teaching O level STEM subjects.</li>
     </ul>
   </div>
+</div>
 
-    <h5 class="header mt-4">EDUCATION</h5>
+  <div class="py-3">
+    <h5 class="header">EDUCATION</h5>
     <div class="mt-2">
       <div class="row">
         <div class="col-lg-8"><strong>Bachelor of Actuarial Science</strong></div>
@@ -127,9 +135,16 @@ body {
       </div>
       <h5>Universiti Brunei Darussalam •<span style="font-size: 0.8em; color: gray"> Bandar Seri Begawan, Brunei Darussalam</span>
     </div>
+  </div>
 
-    <h5 class="header mt-4">HOBBIES</h5>
-
+    <div class="py-3">
+    <h5 class="header">HOBBIES</h5>
+    <ul style="font-size: 0.8em">
+      <li>Building games using tools like Dreams & Game Builders Garage.</li>
+      <li>Building model kits like gunpla.</li>
+      <li>Streaming/recording let's plays of games with a focus on appreciating game design choices.</li>
+    </ul>
+  </div>
 
     </div>
     </div>
