--- a/cv/index.html
+++ b/cv/index.html
@@ -29,10 +29,10 @@ body {
   <body>
     <div class="container">
     <div class="row pt-3 mx-5" style="border-bottom: 3px solid black;">
-      <div class="col-lg-8">
+      <div class="col-md-8">
         <h1 class="header" style="font-family: 'Urbanist', sans-serif;">Nicholas Thien Min Jit</h1>
         </div>
-        <div class="col-lg-4 text-end">
+        <div class="col-md-4 text-end">
           <ul style="list-style-type: none !important;">
             <li><a href = "mailto: nick.thien(at)gmail.com">nick.thien@gmail.com</a></li>
             <li><a href = "https://nickthien.com">nickthien.com</a></li>
@@ -42,7 +42,7 @@ body {
 
 
 <div class="row mx-5">
-  <div class="col-lg-4 px-3" style="background-color: lightgreen;">
+  <div class="col-md-4 px-3" style="background-color: lightgreen;">
     <div class="py-3">
     <h5 class="header">SKILLS</h5>
     <strong>Programming</strong>
@@ -78,7 +78,7 @@ body {
   </div>
   </div>
 
-  <div class="col-lg-8 px-3">
+  <div class="col-md-8 px-3">
     <div class="py-3">
     <h5 class="header">EXPERIENCE</h5>
     <div class="mt-2">
