--- a/cv/index.html
+++ b/cv/index.html
@@ -29,10 +29,10 @@ body {
   <body>
     <div class="container">
     <div class="row pt-3 mx-5" style="border-bottom: 3px solid black;">
-      <div class="col-md-8">
+      <div class="col-lg-8">
         <h1 class="header" style="font-family: 'Urbanist', sans-serif;">Nicholas Thien Min Jit</h1>
         </div>
-        <div class="col-md-4 text-end">
+        <div class="col-lg-4 text-end">
           <ul style="list-style-type: none !important;">
             <li><a href = "mailto: nick.thien(at)gmail.com">nick.thien@gmail.com</a></li>
             <li><a href = "https://nickthien.com">nickthien.com</a></li>
@@ -42,7 +42,7 @@ body {
 
 
 <div class="row mx-5">
-  <div class="col-md-4 px-3" style="background-color: lightgreen;">
+  <div class="col-lg-4 px-3" style="background-color: lightgreen;">
     <div class="py-3">
     <h5 class="header">SKILLS</h5>
     <strong>Programming</strong>
@@ -78,13 +78,13 @@ body {
   </div>
   </div>
 
-  <div class="col-md-8 px-3">
+  <div class="col-lg-8 px-3">
     <div class="py-3">
     <h5 class="header">EXPERIENCE</h5>
     <div class="mt-2">
     <div class="row">
-      <div class="col-md-8" style="font-size: 0.9em;"><strong>Content Executive</strong></div>
-      <div class="col-md-4 text-end" style="font-size: 0.8em;">May 2017 - Nov 2017</div>
+      <div class="col-lg-8" style="font-size: 0.9em;"><strong>Content Executive</strong></div>
+      <div class="col-lg-4 text-end" style="font-size: 0.8em;">May 2017 - Nov 2017</div>
     </div>
     <h5 class="mt-2" style="font-size: 1.2em;">Fire Dragoon Esports Sdn. Bhd. •<span style="font-size: 0.8em; color: gray"> Kuala Lumpur, Malaysia</span></h5>
     <ul style="font-size: 0.8em">
@@ -96,8 +96,8 @@ body {
 
   <div class="mt-2">
     <div class="row">
-      <div class="col-md-8" style="font-size: 0.9em;"><strong>Customer Service Executive</strong></div>
-      <div class="col-md-4 text-end" style="font-size: 0.8em;">Oct 2016 - Feb 2017</div>
+      <div class="col-lg-8" style="font-size: 0.9em;"><strong>Customer Service Executive</strong></div>
+      <div class="col-lg-4 text-end" style="font-size: 0.8em;">Oct 2016 - Feb 2017</div>
     </div>
     <h5 class="mt-2" style="font-size: 1.2em;">Veloce Solutions Sdn. Bhd. •<span style="font-size: 0.8em; color: gray"> Selangor, Malaysia</span></h5>
     <ul style="font-size: 0.8em">
@@ -108,8 +108,8 @@ body {
 
   <div class="mt-2">
     <div class="row">
-      <div class="col-md-8" style="font-size: 0.9em;"><strong>High School Teacher / Substitute Primary School Teacher</strong></div>
-      <div class="col-md-4 text-end" style="font-size: 0.8em;">May 2009 - Oct 2010</div>
+      <div class="col-lg-8" style="font-size: 0.9em;"><strong>High School Teacher / Substitute Primary School Teacher</strong></div>
+      <div class="col-lg-4 text-end" style="font-size: 0.8em;">May 2009 - Oct 2010</div>
     </div>
     <h5 class="mt-2" style="font-size: 1.2em;">Saint Andrew's School BSB •<span style="font-size: 0.8em; color: gray"> Bandar Seri Begawan, Brunei Darussalam</span></h5>
     <ul style="font-size: 0.8em">
@@ -122,16 +122,16 @@ body {
     <h5 class="header">EDUCATION</h5>
     <div class="mt-2">
       <div class="row">
-        <div class="col-md-8"><strong>Bachelor of Actuarial Science</strong></div>
-        <div class="col-md-4 text-end" style="font-size: 0.8em;">Jan 2011 - Sep 2016</div>
+        <div class="col-lg-8"><strong>Bachelor of Actuarial Science</strong></div>
+        <div class="col-lg-4 text-end" style="font-size: 0.8em;">Jan 2011 - Sep 2016</div>
       </div>
       <h5>Universiti Tunku Abdul Rahman •<span style="font-size: 0.8em; color: gray"> Kuala Lumpur, Malaysia</span>
     </div>
 
     <div class="mt-4">
       <div class="row">
-        <div class="col-md-8"><strong>Bachelor of Health Science/Medicine</strong></div>
-        <div class="col-md-4 text-end" style="font-size: 0.8em;">Aug 2006 - May 2009</div>
+        <div class="col-lg-8"><strong>Bachelor of Health Science/Medicine</strong></div>
+        <div class="col-lg-4 text-end" style="font-size: 0.8em;">Aug 2006 - May 2009</div>
       </div>
       <h5>Universiti Brunei Darussalam •<span style="font-size: 0.8em; color: gray"> Bandar Seri Begawan, Brunei Darussalam</span>
     </div>
@@ -154,7 +154,7 @@ body {
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/ulg/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
   </body>
