--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@100&display=swap');
 
-body {
+page {
+  background: white;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 0.5cm;
+  box-shadow: 0 0 0.5cm rgba(0,0,0,0.5);
+}
+page[size="A4"] {
   width: 21cm;
   height: 29.7cm;
 }
@@ -27,6 +34,8 @@ body {
     <title>Nicholas Thien Min Jit</title>
   </head>
   <body>
+    <page size="A4">
+
     <div class="container">
     <div class="row pt-3 mx-5" style="border-bottom: 3px solid black;">
       <div class="col-lg-7">
@@ -157,5 +166,6 @@ body {
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/ulg/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
+  </page>
   </body>
 </html>
