--- a/cv/index.html
+++ b/cv/index.html
@@ -80,6 +80,8 @@ page[size="A4"] {
     </ul>
     <h5 class="header mt-5">TOOLS</h5>
     <ul style="font-size: 0.8em">
+      <li>JIRA</li>
+      <li>Unity</li>
       <li>Open Broadcaster Software</li>
       <li>Adobe Premiere Pro / DaVinci Resolve</li>
       <li>Adobe Photoshop / GIMP</li>
@@ -90,6 +92,20 @@ page[size="A4"] {
   <div class="col-lg-8 px-3">
     <div class="py-3">
     <h5 class="header">EXPERIENCE</h5>
+    <div class="mt-2">
+    <div class="row">
+      <div class="col-lg-7" style="font-size: 0.9em;"><strong>Freelance Consultant</strong></div>
+      <div class="col-lg-5 text-end" style="font-size: 0.8em;">August 2018 - Current</div>
+    </div>
+    <h5 class="mt-2" style="font-size: 1.2em;">Awespyre Services Sdn. Bhd. •<span style="font-size: 0.8em; color: gray"> Kuala Lumpur, Malaysia</span></h5>
+    <ul style="font-size: 0.8em">
+      <li>Consulting and design of websites.</li>
+      <li>Education of programming apps like Unity & Scratch.</li>
+      <li>Event hosting.</li>
+      </ul>
+  </div>
+
+
     <div class="mt-2">
     <div class="row">
       <div class="col-lg-7" style="font-size: 0.9em;"><strong>Content Executive</strong></div>
