--- a/cv/index.html
+++ b/cv/index.html
@@ -21,7 +21,7 @@ page {
 }
 page[size="A4"] {
   width: 21cm;
-  height: 29.7cm;
+  height: 100%;
 }
 
 .header {
@@ -51,7 +51,7 @@ page[size="A4"] {
 
 
 <div class="row mx-5">
-  <div class="col-lg-4 px-3" style="background-color: lightgreen;">
+  <div class="col-lg-4 px-3" style="background-image: linear-gradient(to bottom, lightgreen, darkgreen);">
     <div class="py-3">
     <h5 class="header">SKILLS</h5>
     <strong>Programming</strong>
