--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Nick's Website">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="blogs">
+  <meta name="apple-mobile-web-app-title" content="nickwebsite">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>blogs</title>
+  <title>nickwebsite</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -34,7 +34,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '310430317';
+    var serviceWorkerVersion = '1688376807';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
