--- a/index.html
+++ b/index.html
@@ -16,20 +16,24 @@
 <style>
 
 body {
-  background-color: lightblue;
+  background-color: rgba(66, 66, 66, 1.0);
 }
-     /* The heart of the matter */
 
 .container-1 {
-  background-color: lightgreen;
+  padding: 50px;
+  background-color:  rgba(158, 158, 158, 1.0);
 }
 
+.container-2 {
+  padding: 50px;
+  background-color:  rgba(158, 158, 158, 1.0);
+}
 
 .careercards {
   max-width: 250px;
   border: 1px solid grey;
   border-radius: 10px;
-  float: left;
+  padding: 25px;
 }
 
 </style>
@@ -37,60 +41,83 @@ body {
 
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Nick Thien</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-<div class="container">
-<h2>Nick Thien</h2>
-<h4>Writer | Editor | Tutor | Web Developer</h4>
-
-
-
-
-</div>
-
-
+      <div class="collapse navbar-collapse" id="navbarMain">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+            <ul class="dropdown-menu" aria-labelledby="dropdown05">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form>
+          <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+        </form>
+      </div>
+    </div>
+  </nav>
 
 <div class="container-1">
   <div class="container">
-    <h2  class="d-flex justify-content-center pt-5">Work Experience</h2>
+    <h2>Nick Thien</h2>
+    <h4>Writer | Tutor | Software Developer</h4>
+  </div>
+</div>
 
-  <div class="row justify-content-around">
-    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+<div class="container-2">
+  <div class="container">
+    <h2  class="d-flex justify-content-center my-5">WORK EXPERIENCE</h2>
+
+  <div class="row justify-content-evenly">
+    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
       <div class="d-flex justify-content-center"><img src="./img/logo/logo_awespyre.png" class="img-fluid p-3" style="height: 100px;" alt="Awespyre"></div>
       <h4>Business Owner | Awespyre</h4>
       <p>2018 - Present</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
     </div>
-    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
       <div class="d-flex justify-content-center"><img src="./img/logo/logo_fdg.png" class="img-fluid p-3" style="height: 100px;" alt="Fire dragoon"></div>
       <h4>Content Executive | Fire Dragoon Esports</h4>
       <p>2017</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
     </div>
-  </div>
-
-  <div class="row justify-content-around">
-    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
       <div class="d-flex justify-content-center"><img src="./img/logo/logo_gg.png" class="img-fluid p-3" style="height: 100px;" alt="Generasi Gemilang"></div>
       <h4>Volunteer | Generasi Gemilang</h4>
       <p>2017</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
     </div>
-    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
       <div class="d-flex justify-content-center"><img src="./img/logo/logo_vs.png" class="img-fluid p-3" style="height: 100px;" alt="Veloce Solutions"></div>
       <h4>Customer Service Executive | Veloce Solutions</h4>
       <p>2017</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
     </div>
-  </div>
-
-  <div class="row justify-content-around">
-    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
       <div class="d-flex justify-content-center"><img src="./img/logo/logo_lm.png" class="img-fluid p-3" style="height: 100px;" alt="Lil' Monsters"></div>
       <h4>Junior Executive | Lil' Monsters</h4>
       <p>2017</p>
       <p>Started a co-working space to help other SME / Entreprenuers with an affordable and safe space to meet and exchange ideas.</p>
     </div>
-    <div class="col-lg-5 my-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
+    <div class="col-sm-12 col-md-8 col-lg-4 m-3" style="border: solid 1px green; border-radius: 10px; background-color: white;">
       <div class="d-flex justify-content-center"><img src="./img/logo/logo_sas.png" class="img-fluid p-3" style="height: 100px;" alt="St. Andrew's School"></div>
       <h4>Teacher | St. Andrew's School</h4>
       <p>2017</p>
