More articles uploaded

--- a/writtenwork/esports/team-interview-overwatch.html
+++ b/writtenwork/esports/team-interview-overwatch.html
@@ -1,28 +1,34 @@
 <!doctype html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="../style.css" rel="stylesheet">
 
     <title>Team Interview | Pre-ESL Playoffs | Overwatch</title>
   </head>
   <body>
+    <div class="container my-3">
+      <h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1>
+    </div>
 
-<div class="container">
-    <img class="rounded mx-auto my-3 d-block" src='../img/placeholder/placeholder_esports_fdg.jpg' style="width: 100%">
-
-    <div class="container py-3" style="background-color: #F5F5F5;">
+    <div class="container info py-3" style="background-color: #F5F5F5;">
       <h2>Team Interview | Pre-ESL Playoffs | Overwatch</h2>
       <h5 class="text-muted">Part time team, full time heroes. Getting to know the FDG Overwatch team.</h5>
-      <h6>Published: <span style="font-weight: 300;">2017-08-23</span></h6>
+      <h6><strong>Published:</strong> <span style="font-weight: 300;">2017-08-23</span></h6>
+    </div>
+
+    <div class="container">
+      <img class="rounded mx-auto my-3 d-block" src='../img/placeholder/placeholder_esports_fdg.jpg' style="width: 100%">
     </div>
 
     <div class="container my-3">
-      <p>Over the past few months since the inception of the <em>Fire Dragoon Overwatch</em> team, their name has been a fixture of the local Malaysian Overwatch scene. From the monthly online tournaments organized by <em>Midnight Gaming</em> to one-off (for the time being) tournaments such as <em>C2AGE X-treme 2017</em>, <em>APU #Play4Charity</em> and last weekend's <em>Neueaka Overwatch Merdeka Cup 2017</em>, the FDG team has been a force to be reckoned with.</p>
+      <p>Over the past few months since the inception of the <em>Fire Dragoon</em> <em>Overwatch</em> team, their name has been a fixture of the local Malaysian <em>Overwatch</em> scene. From the monthly online tournaments organized by <em>Midnight Gaming</em> to one-off (for the time being) tournaments such as <em>C2AGE X-treme 2017</em>, <em>APU #Play4Charity</em> and last weekend's <em>Neueaka Overwatch Merdeka Cup 2017</em>, the FDG team has been a force to be reckoned with.</p>
 
-      <p>Consistently landing themselves in the top spot of the local Overwatch competitive scene is one thing, but the team has also been proving themselves in the international scene. Over the past 7 weeks, the team has been playing against some of the top teams from all over South East Asia in the ESL Overwatch Open Division Season 1 - Regular Season.</p>
+      <p>Consistently landing themselves in the top spot of the local <em>Overwatch</em> competitive scene is one thing, but the team has also been proving themselves in the international scene. Over the past 7 weeks, the team has been playing against some of the top teams from all over South East Asia in the ESL Overwatch Open Division Season 1 - Regular Season.</p>
 
       <p>Facing teams from Singapore, Vietnam, Thailand, and even India. The team managed to show that they aren't just good in the local context but able to stand up to the pressure from other countries as well. Outside of two matches that the team was unable to play at, the team has held their opponents to scores less than 2. With one game conceding only two points.</p>
 
@@ -91,8 +97,6 @@
       <p><strong>Thank you to the team for their time away from their day job and from scrims. They will be playing at ESL Overwatch Open Division Season 1 - Playoffs Season this weekend and the games will be streamed here.</strong></p>
 
     </div>
-    
-  </div>
 
     </body>
   </html>
