--- a/writtenwork/index.html
+++ b/writtenwork/index.html
@@ -6,31 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link href="style.css" rel="stylesheet">
 
     <title>Written Work</title>
   </head>
   <body>
     <div class="container my-3">
-      <h1>Written Work</h1>
+      <h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1>
     </div>
 
     <div class="container my-3">
-      <h2>Latest Work</h2>
-      <div class="row" id="rowLatest"></div>
+      <h2 class="header">LATEST</h2>
+      <div class="row d-flex justify-content-evenly" id="rowLatest"></div>
     </div>
 
     <div class="container my-3">
-      <h2>Reviews</h2>
+      <h2 class="header">REVIEWS</h2>
     </div>
 
     <div class="container my-3">
-      <h2>Esports</h2>
-      <div class="row" id="rowEsports"></div>
+      <h2 class="header">ESPORTS</h2>
+      <div class="row d-flex justify-content-evenly" id="rowEsports"></div>
     </div>
 
     <div class="container my-3">
-      <h2>Categories</h2>
+      <h2 class="header">CATEGORIES</h2>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
