--- a/writtenwork/esports/index.html
+++ b/writtenwork/esports/index.html
@@ -12,25 +12,12 @@
   </head>
   <body>
     <div class="container my-3">
-      <h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1>
+      <a href="https://www.nickthien.com/writtenwork" class="websiteHeader"><h1 style="padding: 0px 10px;"><strong>WRITTEN WORK</strong></h1></a>
     </div>
 
     <div class="container section">
-      <h2 class="header">LATEST</h2>
-      <div class="row d-flex justify-content-evenly my-3" id="rowLatest"></div>
-    </div>
-
-    <div class="container section">
-      <h2 class="header">REVIEWS</h2>
-    </div>
-
-    <div class="container section">
-      <a href="https://www.nickthien.com/writtenwork/esports" class="websiteHeader"><h2 class="header">ESPORTS</h2></a>
+      <h2 class="header">ESPORTS</h2>
       <div class="row d-flex justify-content-evenly my-3" id="rowEsports"></div>
-    </div>
-
-    <div class="container section">
-      <h2 class="header">CATEGORIES</h2>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
