--- a/writtenwork/esports/index.html
+++ b/writtenwork/esports/index.html
@@ -21,9 +21,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="./scripts/articles.js"></script>
-    <script type="text/javascript" src="./scripts/latest.js"></script>
-    <script type="text/javascript" src="./scripts/esports.js"></script>
+    <script type="text/javascript" src="https://nickthien.com/writtenwork/scripts/articles.js"></script>
+    <script type="text/javascript" src="https://nickthien.com/writtenwork/scripts/latest.js"></script>
+    <script type="text/javascript" src="https://nickthien.com/writtenwork/scripts/esports.js"></script>
 
   </body>
 </html>
