--- a/writtenwork/index.html
+++ b/writtenwork/index.html
@@ -35,6 +35,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://nickthien.com/writtenwork/scripts/articles.js"></script>
+    <script>
+    let size=4;
+    </script>
     <script type="text/javascript" src="https://nickthien.com/writtenwork/scripts/latest.js"></script>
     <script type="text/javascript" src="https://nickthien.com/writtenwork/scripts/esports.js"></script>
 
