--- a/writtenwork/esports/index.html
+++ b/writtenwork/esports/index.html
@@ -17,7 +17,7 @@
 
     <div class="container section">
       <h2 class="header">ESPORTS</h2>
-      <div class="row d-flex justify-content-evenly my-3" id="rowEsports"></div>
+      <div class="row d-flex justify-content-start my-3" id="rowEsports"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
