--- a/writtenwork/index.html
+++ b/writtenwork/index.html
@@ -17,7 +17,7 @@
 
     <div class="container section">
       <h2 class="header">LATEST</h2>
-      <div class="row d-flex justify-content-evenly my-3" id="rowLatest"></div>
+      <div class="row d-flex justify-content-start my-3" id="rowLatest"></div>
     </div>
 
     <div class="container section">
@@ -26,7 +26,7 @@
 
     <div class="container section">
       <a href="https://www.nickthien.com/writtenwork/esports" class="websiteHeader"><h2 class="header">ESPORTS</h2></a>
-      <div class="row d-flex justify-content-evenly my-3" id="rowEsports"></div>
+      <div class="row d-flex justify-content-start my-3" id="rowEsports"></div>
     </div>
 
     <div class="container section">
